<resources>
    <string name="app_name">MediAlarm</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="add_new_medication">Add New Medication</string>
    <string name="add_medication_message">This feature will allow you to add a new medication to your schedule.</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="continue_message">Continue</string>

    <string-array name="medicine_forms_array">
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Pill</item>
        <item>Powder</item>
        <item>Granules</item>
        <item>Lozenge</item>
        <item>Liquid</item>
        <item>Syrup</item>
        <item>Suspension</item>
        <item>Drops</item>
        <item>Injection</item>
        <item>Ointment</item>
        <item>Cream</item>
        <item>Gel</item>
        <item>Lotion</item>
        <item>Foam</item>
        <item>Patch</item>
        <item>Inhaler</item>
        <item>Spray</item>
        <item>Nebulizer Solution</item>
        <item>Suppository</item>
        <item>Implant</item>
    </string-array>

    <string-array name="dosage_units_array">
        <item>mg</item>
        <item>g</item>
        <item>ml</item>
        <item>l</item>
        <item>IU</item>
        <item>mcg</item>
        <item>%</item>
        <item>drops</item>
        <item>puff</item>
    </string-array>


    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="dosage">Dosage</string>
    <string name="form_type">Form Type</string>
    <string name="active">Active</string>
    <string name="notes">Notes</string>
    <string name="unit">Unit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="interval">Interval</string>
    <string name="which_of_these_options_works_for_your_medication_schedule">Which of these options works for your medication schedule?</string>
    <string name="hours">Hours</string>
    <string name="days">Days</string>
    <string name="remind_every">Remind every</string>
    <string name="multiple_times_daily">Multiple Times Daily</string>
    <string name="specific_days_of_the_week">Specific Days of the week</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="cyclic_mode">Cyclic mode</string>
    <string name="cycle">Cycle</string>
    <string name="_30_intake_10_pause">30 intake, 10 pause</string>
    <string name="start_date">Start Date</string>
    <string name="intake_days">Intake Days</string>
    <string name="please_confirm_the_cycle_details_below">Please confirm the cycle details below</string>
    <string name="when_would_you_like_to_be_reminded">When would you like to be reminded</string>
    <string name="add_time">Add time</string>
    <string name="pill_s">Pill(s)</string>
    <string name="rest_days">Rest Days</string>
    <string name="time">Time</string>
    <string name="what_time_should_we_remind_you">What time should we remind you?</string>
    <string name="for_the_following_days">For the following days:</string>
    <string name="what_time_s_should_we_remind_you">What time(s) should we remind you?</string>

    <string name="every_day">Every day</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <string name="no_days_selected">No days Selected</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="your_device_your_health">Your device, Your health</string>
    <string name="to_deliver_the_full_funcionality_of_our_app_we_need_your_consent_to_responsibly_process_any_personal_and_health_information_you_provide">To deliver the full funcionality of our app , we need your consent to responsibly process any personal and health information you provide</string>
    <string name="local_only">Local Only</string>
    <string name="no_tracking">No Tracking</string>
    <string name="read_full_privacy_policy">Read full privacy policy</string>
    <string name="i_accept_the_terms_and_privacy_policy">I accept the terms and privacy policy</string>
    <string name="next_week">Next Week</string>
    <string name="previous_week">Previous Week</string>
    <string name="edit_schedule">Edit Schedule</string>
    <string name="remove">Remove</string>
    <string name="amount">Amount</string>
    <string name="smart_scheduling">Smart Scheduling</string>
    <string name="set_custom_times_for_each_medication">Set custom times for each medication</string>
    <string name="reliable_notifications">Reliable Notifications</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="we_ll_ask_for_permission_to_send_medication_reminders">We\'ll ask for permission to send medication reminders.</string>
    <string name="maintain_consistent_medication_adherence">Maintain consistent medication adherence</string>
    <string name="better_health_outcomes">Better Health Outcomes</string>
    <string name="never_miss_your_medicine">Never Miss Your Medicine</string>
    <string name="get_timely_reminders_to_take_your_medications">Get timely reminders to take your medications</string>
    <string name="medicine_reminder_icon">Medicine reminder icon</string>
    <plurals name="days_a_week">
        <item quantity="one">%d day a week</item>
        <item quantity="other">%d days a week</item>
    </plurals>
</resources>
