<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.ui.addMedicine.interval.AddTimesIntervalDaysFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/medicineName"
                style="?attr/textAppearanceTitleLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Acetaminofen" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reminderText"
                style="?attr/textAppearanceSubtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/when_would_you_like_to_be_reminded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medicineName" />


            <!-- Start Date Section -->
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/startDateLabel"
                style="?attr/textAppearanceTitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/start_date"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminderText" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartDate"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginTop="8dp"
                android:gravity="start|center_vertical"
                android:paddingStart="16dp"
                android:paddingEnd="12dp"
                android:text="Select days"
                app:icon="@drawable/ic_calendar"
                app:iconGravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/startDateLabel"
                tools:text="Today, Dec 15" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reminderTimesLabel"
                style="?attr/textAppearanceTitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="Reminder times"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnStartDate" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/reminderTimesDescription"
                style="?attr/textAppearanceBodyMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Set times for daily reminders"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminderTimesLabel" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reminderTimesList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:nestedScrollingEnabled="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reminderTimesDescription"
                tools:itemCount="2"
                tools:listitem="@layout/list_item_time" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:text="@string/add_time"
        app:icon="@drawable/ic_add" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/ic_check" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>